fix overflow on home view

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,10 @@
 	font-family: poppinsRegular;
 }
 
+.body{
+	overflow: hidden;
+}
+
 .homeWrapper {
 	position:fixed;
     padding:0;
